// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styleguideMemberNotificationHandler getTeamsMessage should match snapshot when there are more than one events 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**2 new users** just joined _Styleguide MS Teams Integration_",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "Say hi 👋",
          "spacing": "none"
        }
      ]
    }
  ]
}
`;

exports[`styleguideMemberNotificationHandler getTeamsMessage should match snapshot when there is only one event 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**dirtybit** just joined _Styleguide MS Teams Integration_.",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "Say hi 👋",
          "spacing": "none"
        }
      ]
    }
  ]
}
`;
